# SE_Oblig2

./: Oppgave_1.py  README.md  list_slice.py  pyproject.toml
.github/workflows/: run-tests.yaml
leapyear/: README.md
leapyear/src/: leap_year.py
leapyear/test/: test_leap_year.py
