[tool.poetry]
name = "poetry init"
version = "poetry add pytest"
description = ""
authors = ["FrenzyCT <111730227+FrenzyCT@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
